[project]
name = "ide"
version = "0.1.0"
description = ""
authors = [
  {name = "Eren",email = "gerensuner@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = ["textual (>=3.2.0,<4.0.0)"]

[tool.poetry]
packages = [{ include = "agent_native", from = "src" }]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"